# landoubao-mem0

./: .dockerignore  .env.example  .env.simulation  .gitignore  CHANGELOG.md  COMPLETE_MANUAL.md  COMPLETE_MEMORY_SOLUTION.md  COMPLETE_SYSTEM_README.md  COMPLETION_REPORT.md  CONFIGURATION_CHANGES.md  CONFIG_REFERENCE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_ALICLOUD.md  ENHANCED_MEMORY_IMPLEMENTATION.md  ENHANCED_MEMORY_SYSTEM.md  FAQ_CHINESE_EXTRACTION.md  MCP_DEPLOYMENT_GUIDE.md  MCP_INTEGRATION_GUIDE.md  MEMORY_UPDATE_IMPLEMENTATION_REPORT.md  MEMORY_UPDATE_STRATEGY.md  MULTILINGUAL_FACTS.md  MULTIUSER_MULTILINGUAL_GUIDE.md  PERSONAL_ASSISTANT_GUIDE.md  PERSONAL_ASSISTANT_TEST.md  PROJECT_DELIVERY.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_MULTIUSER.md  README.md  README_CN.md  README_DEMO.md  README_PROJECT_COMPLETION.md  SECURITY_IMPROVEMENTS.md  SETUP_GUIDE.md  SIMPLIFIED_MCP_SERVER_GUIDE.md  SMART_MEMORY_FIVE_LEVELS.md  SOLUTION_SUMMARY.md  TEST_VALIDATION_REPORT.md  debug_chat.py  debug_mcp.py  (+14 more)
app/: .env  .env.example  Dockerfile  Dockerfile.mcp  Dockerfile.mcp-http  complete_memory_engine.py  complete_memory_system.py  enhanced_memory_strategy.py  main.py  mcp_server.py  mcp_server_http.py  mcp_tools_openai_format.json  memory_maintenance.py  memory_update_strategy.py  personal_assistant.py  personal_assistant_web.py  pyproject.toml  scheduler_lifecycle.py  smart_retriever.py  users.txt
tests/: README.md  demo_basic_vs_enhanced.py  demo_memory_update_strategy.py  demo_multilingual.py  diagnose.py  pyproject.toml  quick_test_guide.py  test_ai_assistant_multiuser.py  test_api.py  test_archive_memory.py  test_chinese_extraction.py  test_chinese_facts.py  test_quick.py  (+15 more)
(+16 files in other folders)
