[project]
name = "mem0-docker"
version = "0.1.0"
description = "Custom Mem0 Deployment with Zhipu AI and ModelArk - MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mem0ai",
    "fastapi",
    "uvicorn",
    "qdrant-client",
    "openai",
    "pydantic",
    "requests",
    "httpx",
    "mcp>=0.9.0",
    "sse-starlette>=1.6.5",
]

[tool.uv]
dev-dependencies = []
